--- a/Entanglement classifier/Entanglement_CNN_train.ipynb
+++ b/Entanglement classifier/Entanglement_CNN_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The process are gonna be runned in cuda\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check if GPU is available, if is then the train process are going to be runned in it.\n",
+    "\n",
+    "if torch.cuda.is_available():\n",
+    "    device = \"cuda\"\n",
+    "else:\n",
+    "    device = \"cpu\"\n",
+    "\n",
+    "print(\"The process are gonna be runned in \" + device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,12 +94,34 @@
     "        return x\n",
     "\n",
     "# Instantiate the model\n",
-    "model = EntanglementNN()\n"
+    "model = EntanglementNN()\n",
+    "model = model.to(device = device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<All keys matched successfully>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trained_model = torch.load('model.pth')\n",
+    "model.load_state_dict(trained_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,14 +132,14 @@
     "#   batch_size to define number of data used for each epoch to update the weights\n",
     "\n",
     "N_train     = 10000\n",
-    "criterion   = \"ppt\"\n",
-    "N_epochs    = 30\n",
-    "batch_size  = 32"
+    "ent_crit    = \"werner\"\n",
+    "N_epochs    = 100\n",
+    "batch_size  = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,13 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define a function with different parameters thats train our model\n",
     "\n",
-    "def train_model(model, criterion, entanglement_criterion, optimizer, epochs = 20):\n",
+    "def train_model(model, criterion, entanglement_criterion, optimizer, epochs = 20, batch_size = 32, device = \"cpu\"):\n",
     "    # Trains a PyTorch model using the provided data loader, criterion (loss function), and optimizer.\n",
     "\n",
     "    # Parameters:\n",
@@ -127,9 +173,9 @@
     "\n",
     "        clear_output(wait = True)\n",
     "\n",
-    "        state_train, p_train = create_dataset(num_samples = N_train, criterion = entanglement_criterion)\n",
+    "        state_train, p_train = create_dataset(num_samples = N_train, criterion = entanglement_criterion, device = device)\n",
     "        train_dataset   = TensorDataset(state_train, p_train)\n",
-    "        train_loader    = DataLoader(train_dataset, batch_size=32)\n",
+    "        train_loader    = DataLoader(train_dataset, batch_size = batch_size)\n",
     "\n",
     "        running_loss = 0.0\n",
     "        \n",
@@ -168,22 +214,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Start the train process and save the model\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr = 1e-3)\n",
-    "train_model(model, criterion, \"ppt\", optimizer, epochs = N_epochs)\n",
+    "train_model(model, criterion, ent_crit, optimizer, epochs = N_epochs, batch_size = batch_size, device=device)\n",
     "torch.save(model.state_dict(), \"model.pth\")\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr = 1e-4)\n",
-    "train_model(model, criterion, \"ppt\", optimizer, epochs = N_epochs)\n",
+    "train_model(model, criterion, ent_crit, optimizer, epochs = N_epochs, batch_size = batch_size, device=device)\n",
     "torch.save(model.state_dict(), \"model.pth\")\n",
     "\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr = 1e-5)\n",
-    "train_model(model, criterion, \"ppt\", optimizer, epochs = 10*N_epochs)\n",
+    "train_model(model, criterion, ent_crit, optimizer, epochs = 10*N_epochs, batch_size = batch_size, device=device)\n",
     "torch.save(model.state_dict(), \"model.pth\")"
    ]
   }
