--- a/Entanglement classifier/entanglement_CNN.ipynb
+++ b/Entanglement classifier/entanglement_CNN.ipynb
@@ -96,21 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Generating states with Peres criterion: 100%|██████████| 100000/100000 [00:41<00:00, 2418.43it/s]\n"
+      "Generating Werner states: 100%|██████████| 100000/100000 [00:17<00:00, 5714.05it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The success ratio of our model is  64.41900000000001 %\n"
+      "The success ratio of our model is  98.58 %\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
     "# and separable. Then, we use the model for the same task and then we verify if the prediction made for the model is correct or not.\n",
     "\n",
     "N_test      = 100000\n",
-    "state, p    = create_dataset(N_test, criterion=\"ppt\")\n",
+    "state, p    = create_dataset(N_test, criterion=\"werner\")\n",
     "\n",
     "test_tick   = []\n",
     "check_model = torch.abs(model(state) - p)\n",
@@ -151,7 +151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
